upd: now we only store minimal video obejct data and always attach container to titles (in all flows)

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2427,6 +2427,9 @@ header .heading-row {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+.downloads-container .selected-option {
+  cursor: default;
+}
 
 .active-downloads,
 .downloads-history {
