--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -10,6 +10,10 @@
     height: auto;
     display: flex;
     flex-direction: column;
+	
+	.selected-option {
+		cursor: default;
+	}
 }
 
 .active-downloads,
