upd: style for dd options in columns

--- a/extension/popup/styles/_dropdown.scss
+++ b/extension/popup/styles/_dropdown.scss
@@ -291,6 +291,8 @@
     cursor: pointer;
     transition: background-color var(--transition-fast);
     border-radius: 2px;
+	
+	&:not(:last-child) { margin-bottom: 1px;}
 
     &:hover {
         position: relative;
