--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -922,6 +922,9 @@ header .heading-row {
   transition: background-color var(--transition-fast);
   border-radius: 2px;
 }
+.track-option:not(:last-child) {
+  margin-bottom: 1px;
+}
 .track-option:hover {
   position: relative;
   min-width: 100%;
