ref-mid: fully redesigned flags/structural updates for storeandnotifyui() instead of updateVideo() and sendvideoupdatetoUI() and sendVideoStateChange() debouncer
now we have structural and flags updates, which work kinda the same as previously, but with way less infocations and less data transferred

upd: now we add encryption info in downloads-tab during download, if it's present (respected)

fix: preview loading almost fully fixed (no blur still)

TODO: check when updates are structural/flags and how they are propagated (manual work I think)

--- a/extension/popup/styles/_animations.scss
+++ b/extension/popup/styles/_animations.scss
@@ -36,8 +36,8 @@
     }
 }
 
-// Show loader when preview container has loading class
-.preview-container.loading .loader {
+// Show loader when video item has generating-preview class
+.video-item.generating-preview .preview-container .loader {
     display: flex;
 }
 
@@ -73,8 +73,8 @@
     }
 }
 
-// Show retry button when container is not loading and has no preview
-.preview-container:not(.loading):not(.has-preview) .retry-preview-btn {
+// Show retry button when video item is not generating preview and container has no preview
+.video-item:not(.generating-preview) .preview-container:not(.has-preview) .retry-preview-btn {
     display: flex;
 }
 
