--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -135,7 +135,7 @@
 .theme-dark .history-retry-btn svg,
 .history-retry-btn .theme-dark svg,
 .theme-dark .history-delete-file-btn svg,
-.history-delete-file-btn .theme-dark svg, .theme-dark .downloads-history .download-timestamp, .downloads-history .theme-dark .download-timestamp, .theme-dark .video-item.state-probing .custom-dropdown .selected-option .label::after, .video-item.state-probing .custom-dropdown .selected-option .theme-dark .label::after, .theme-dark .video-item.state-parsing .custom-dropdown .selected-option .label::after, .video-item.state-parsing .custom-dropdown .selected-option .theme-dark .label::after, .theme-dark .download-menu-item, .theme-dark .status-line .status-value, .status-line .theme-dark .status-value, .theme-dark .tooltip-icon svg, .tooltip-icon .theme-dark svg, .theme-dark .input-group .input-description, .input-group .theme-dark .input-description, .theme-dark .input-field::placeholder, .theme-dark .track-option, .theme-dark .dropdown-option, .theme-dark .tab-button, .theme-dark .cache-stats, .theme-dark .tab-placeholder p, .tab-placeholder .theme-dark p, .theme-dark .tab-placeholder .placeholder-icon svg, .tab-placeholder .placeholder-icon .theme-dark svg {
+.history-delete-file-btn .theme-dark svg, .theme-dark .downloads-history .download-timestamp, .downloads-history .theme-dark .download-timestamp, .theme-dark .video-item.state-processing .custom-dropdown .selected-option .label::after, .video-item.state-processing .custom-dropdown .selected-option .theme-dark .label::after, .theme-dark .video-item.processing .custom-dropdown .selected-option .label::after, .video-item.processing .custom-dropdown .selected-option .theme-dark .label::after, .theme-dark .download-menu-item, .theme-dark .status-line .status-value, .status-line .theme-dark .status-value, .theme-dark .tooltip-icon svg, .tooltip-icon .theme-dark svg, .theme-dark .input-group .input-description, .input-group .theme-dark .input-description, .theme-dark .input-field::placeholder, .theme-dark .track-option, .theme-dark .dropdown-option, .theme-dark .tab-button, .theme-dark .cache-stats, .theme-dark .tab-placeholder p, .tab-placeholder .theme-dark p, .theme-dark .tab-placeholder .placeholder-icon svg, .tab-placeholder .placeholder-icon .theme-dark svg {
   color: var(--text-secondary-dark);
 }
 .theme-light .input-field::-webkit-input-placeholder {
@@ -156,7 +156,7 @@
 .theme-light .history-retry-btn svg,
 .history-retry-btn .theme-light svg,
 .theme-light .history-delete-file-btn svg,
-.history-delete-file-btn .theme-light svg, .theme-light .downloads-history .download-timestamp, .downloads-history .theme-light .download-timestamp, .theme-light .video-item.state-probing .custom-dropdown .selected-option .label::after, .video-item.state-probing .custom-dropdown .selected-option .theme-light .label::after, .theme-light .video-item.state-parsing .custom-dropdown .selected-option .label::after, .video-item.state-parsing .custom-dropdown .selected-option .theme-light .label::after, .theme-light .download-menu-item, .theme-light .status-line .status-value, .status-line .theme-light .status-value, .theme-light .tooltip-icon svg, .tooltip-icon .theme-light svg, .theme-light .input-group .input-description, .input-group .theme-light .input-description, .theme-light .input-field::placeholder, .theme-light .track-option, .theme-light .dropdown-option, .theme-light .tab-button, .theme-light .cache-stats, .theme-light .tab-placeholder p, .tab-placeholder .theme-light p, .theme-light .tab-placeholder .placeholder-icon svg, .tab-placeholder .placeholder-icon .theme-light svg {
+.history-delete-file-btn .theme-light svg, .theme-light .downloads-history .download-timestamp, .downloads-history .theme-light .download-timestamp, .theme-light .video-item.state-processing .custom-dropdown .selected-option .label::after, .video-item.state-processing .custom-dropdown .selected-option .theme-light .label::after, .theme-light .video-item.processing .custom-dropdown .selected-option .label::after, .video-item.processing .custom-dropdown .selected-option .theme-light .label::after, .theme-light .download-menu-item, .theme-light .status-line .status-value, .status-line .theme-light .status-value, .theme-light .tooltip-icon svg, .tooltip-icon .theme-light svg, .theme-light .input-group .input-description, .input-group .theme-light .input-description, .theme-light .input-field::placeholder, .theme-light .track-option, .theme-light .dropdown-option, .theme-light .tab-button, .theme-light .cache-stats, .theme-light .tab-placeholder p, .tab-placeholder .theme-light p, .theme-light .tab-placeholder .placeholder-icon svg, .tab-placeholder .placeholder-icon .theme-light svg {
   color: var(--text-secondary-light);
 }
 
@@ -179,7 +179,8 @@
 }
 
 .download-menu-dropdown, .custom-dropdown .selected-option.downloading.has-progress-tooltip:hover::after, .cache-stats, header {
-  backdrop-filter: var(--backdrop-filter);
+  -webkit-backdrop-filter: var(--backdrop-filter);
+          backdrop-filter: var(--backdrop-filter);
 }
 .theme-dark .download-menu-dropdown, .theme-dark .custom-dropdown .selected-option.downloading.has-progress-tooltip:hover::after, .custom-dropdown .theme-dark .selected-option.downloading.has-progress-tooltip:hover::after, .theme-dark .cache-stats, .theme-dark header {
   background: var(--bg-backdrop-dark);
@@ -363,7 +364,8 @@ header {
   transition: -webkit-box-shadow var(--transition-normal);
   transition: box-shadow var(--transition-normal);
   transition: box-shadow var(--transition-normal), -webkit-box-shadow var(--transition-normal);
-  backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+          backdrop-filter: saturate(180%) blur(20px);
   padding: 8px;
   gap: 8px;
 }
@@ -769,7 +771,8 @@ header .heading-row {
   opacity: 0;
   visibility: hidden;
   width: 282px;
-  backdrop-filter: var(--backdrop-filter);
+  -webkit-backdrop-filter: var(--backdrop-filter);
+          backdrop-filter: var(--backdrop-filter);
   scrollbar-width: none;
 }
 .theme-dark .options-container {
@@ -2390,8 +2393,8 @@ header .heading-row {
       flex-shrink: 0;
 }
 
-.video-item.state-parsing .custom-dropdown .selected-option .label::after {
-  content: "Parsing...";
+.video-item.processing .custom-dropdown .selected-option .label::after {
+  content: "Processing...";
   position: absolute;
   left: 0;
   top: 0;
@@ -2406,12 +2409,12 @@ header .heading-row {
           align-items: center;
   font-weight: 500;
 }
-.video-item.state-parsing .custom-dropdown .selected-option .label {
+.video-item.processing .custom-dropdown .selected-option .label {
   position: relative;
   color: transparent !important;
 }
-.video-item.state-probing .custom-dropdown .selected-option .label::after {
-  content: "Probing...";
+.video-item.state-processing .custom-dropdown .selected-option .label::after {
+  content: "Processing...";
   position: absolute;
   left: 0;
   top: 0;
@@ -2426,12 +2429,9 @@ header .heading-row {
           align-items: center;
   font-weight: 500;
 }
-.video-item.state-probing .custom-dropdown .selected-option .label {
+.video-item.state-processing .custom-dropdown .selected-option .label {
   position: relative;
   color: transparent !important;
-}
-.video-item.state-processing {
-  opacity: 0.9;
 }
 .video-item.state-processing .preview-container {
   position: relative;
@@ -2916,7 +2916,7 @@ header .heading-row {
           animation: spin 1s linear infinite;
 }
 
-.preview-container.loading .loader {
+.video-item.generating-preview .preview-container .loader {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2961,7 +2961,7 @@ header .heading-row {
   transition: transform var(--transition-slow), -webkit-transform var(--transition-slow);
 }
 
-.preview-container:not(.loading):not(.has-preview) .retry-preview-btn {
+.video-item:not(.generating-preview) .preview-container:not(.has-preview) .retry-preview-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
